# Programacao_1

./: LICENSE  README.md  dados.csv  pyproject.toml  teste.py  teste1.py
Desafios/: desafio8.py  desafios2.4.py  teste.py
Lista1/: ex10.py  ex11.py  ex12.py  ex13.py  ex14.py  ex15.py  ex16.py  ex17.py  ex18.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py
Lista2/: ex1.py  ex10.py  ex11.py  ex12.py  ex13.py  ex14.py  ex15.py  ex16.py  ex17.py  ex18.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py  tracaja.py
Lista3/: GFG.csv  debate_band.xlsx  ex1.py  ex10.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py  filmes.csv  filmes_imdb.py  freq_palavras.xlsx  palavra_debate.py  peixes.py  relatorio.txt
Lista4/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py
Lista5/: ex1.py  ex2.py  ex3.py  ex4.py
Lista6/: CBO2010.csv  CBO2011.csv  CBO2012.csv  CBO2013.csv  CBO2014.csv  CBO2015.csv  CBO2016.csv  CBO2017.csv  CBO2018.csv  CBO2019.csv  CBO2020.csv  LCOM2010.csv  LCOM2011.csv  LCOM2012.csv  LCOM2013.csv  LCOM2014.csv  LCOM2015.csv  LCOM2016.csv  LCOM2017.csv  LCOM2018.csv  LCOM2019.csv  LCOM2020.csv  LOC2010.csv  LOC2011.csv  LOC2012.csv  LOC2013.csv  LOC2014.csv  LOC2015.csv  LOC2016.csv  LOC2017.csv  LOC2018.csv  LOC2019.csv  LOC2020.csv  WMC2010.csv  WMC2011.csv  WMC2012.csv  WMC2013.csv  WMC2014.csv  WMC2015.csv  WMC2016.csv  (+11 more)
exsala1/: exsala1.py  exsala10.py  exsala11.py  exsala12.py  exsala13.py  exsala14.py  exsala15.py  exsala16.py  exsala17.py  exsala18.py  exsala19.py  exsala2.py  exsala20.py  exsala21.py  exsala3.py  (+19 more)
(+12 files in other folders)
