[tool.poetry]
name = "repl_nix_Codigos-Vitor-Hugo"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
cinemagoer = "^2022.12.27"
colored = "^1.4.4"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
